@startuml 模板方法模式

title 模板方法模式 - 游戏难度系统

abstract class Game {
    -timer: Timer
    -heroAircraft: HeroAircraft
    -enemyAircrafts: List<AbstractAircraft>
    -heroBullets: List<BaseBullet>
    -enemyBullets: List<BaseBullet>
    -drops: List<Drop>
    -score: int
    -difficultyLevel: int
    -initialDifficulty: int
    -levelManager: PlayerLevelManager
    -soundManager: SoundManager
    
    +action(): void
    +abstract spawnEnemyAircrafts(): void
    +abstract updateDifficultyLevel(gameTime: long): void
    +abstract printDifficultyInfo(): void
    +abstract canSpawnBoss(): boolean
    +abstract getBossHp(): int
    
    #heroShootAction(): void
    #enemyShootAction(): void
    #bulletsMoveAction(): void
    #aircraftsMoveAction(): void
    #crashCheckAction(): void
    #postProcessAction(): void
    #checkResultAction(): void
    #updateFreezeState(): void
}

class SimpleGame {
    +SimpleGame(JFrame frame, String userName)
    +spawnEnemyAircrafts(): void
    +updateDifficultyLevel(gameTime: long): void
    +printDifficultyInfo(): void
    +canSpawnBoss(): boolean
    +getBossHp(): int
}

class NormalGame {
    -bossSpawnCount: int
    -bossWarningShown: boolean
    +NormalGame(JFrame frame, String userName)
    +spawnEnemyAircrafts(): void
    +updateDifficultyLevel(gameTime: long): void
    +printDifficultyInfo(): void
    +canSpawnBoss(): boolean
    +getBossHp(): int
}

class HardGame {
    -bossSpawnCount: int
    -bossWarningShown: boolean
    +HardGame(JFrame frame, String userName)
    +spawnEnemyAircrafts(): void
    +updateDifficultyLevel(gameTime: long): void
    +printDifficultyInfo(): void
    +canSpawnBoss(): boolean
    +getBossHp(): int
}

class PlayerLevelManager {
    -static instance: PlayerLevelManager
    -level: int
    -exp: int
    -static final SHOOT_SPEED_INTERVAL: double = 5
    -static final SHOOT_SPEED_BONUS: double = 0.1
    -static final MAX_SHOOT_SPEED_BONUS: double = 0.5
    +addExp(int amount): void
    +getLevel(): int
    +getExp(): int
    +getShootSpeedBonus(): double
}

Game <|-- SimpleGame
Game <|-- NormalGame
Game <|-- HardGame
Game --> PlayerLevelManager : 使用

note left of Game
  游戏抽象模板类
  定义游戏主循环的骨架
  action()方法作为模板方法
  包含PlayerLevelManager管理玩家等级
  heroShootAction()应用攻速加成
end note

note bottom of SimpleGame
  简单难度
  - 无法生成Boss
  - 敌机攻击力较低
  - 难度不提升
end note

note bottom of NormalGame
  普通难度
  - 可以生成Boss
  - Boss血量固定
  - 难度随时间递进
end note

note bottom of HardGame
  困难难度
  - 可以生成Boss
  - Boss血量递增
  - 难度随时间递进更快
  - 生成EliteProEnemy
end note

@enduml
